add ! in heading

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     Hello,Sexy
-    <h1>Allaho Akbar Khomeini Rahbar</h1>
+    <h1>Allaho Akbar Khomeini Rahbar !!!</h1>
   </body>
 </html>
