--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     Hello,Sexy
-    <h1 style="color: green">Allaho Akbar Khomeini Rahbar !!!</h1>
+    <h1 style="color: green; text-align: center">
+      Allaho Akbar Khomeini Rahbar !!!
+    </h1>
   </body>
 </html>
